--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,27 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 14:24]
+#+CAPTION: Clock summary at [2016-12-19 Mon 17:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:36* |       |       | 100.0 |
+| *Total time*                                                                | *41:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:36   |       |       | 100.0 |
-| Active                                                                      |         | 39:36 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.3 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  14.9 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.5 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.6 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  30.1 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.7 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.9 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  18.9 |
-| COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.8 |
-| COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.8 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.5 |
+| Stories                                                                     | 41:56   |       |       | 100.0 |
+| Active                                                                      |         | 41:56 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:56 |   2.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.2 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  14.1 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.3 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   9.0 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  28.5 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.6 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.3 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  17.8 |
+| COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.7 |
+| COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.7 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.3 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.6 |
+| STARTED Add support for associations in C#                                  |         |       |  2:20 |   5.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -480,6 +481,26 @@ exception inheriting from =System.Exception=.
 Links:
 
 - [[https://msdn.microsoft.com/en-us/library/ms173163.aspx][Creating and Throwing Exceptions (C# Programming Guide)]]
+
+*** STARTED Add support for associations in C#                        :story:
+    CLOCK: [2016-12-19 Mon 17:01]--[2016-12-19 Mon 17:44] =>  0:43
+    CLOCK: [2016-12-19 Mon 16:28]--[2016-12-19 Mon 17:00] =>  0:32
+    CLOCK: [2016-12-19 Mon 16:01]--[2016-12-19 Mon 16:27] =>  0:26
+    CLOCK: [2016-12-19 Mon 14:44]--[2016-12-19 Mon 15:05] =>  0:21
+    CLOCK: [2016-12-19 Mon 14:25]--[2016-12-19 Mon 14:43] =>  0:18
+
+Add support for association with other model types.
+
+Problems:
+
+- the key problem is helpers: we do not have a formatter for
+  =Default=. The quick solution for this may just be to inject this
+  family against an empty list of helpers.
+- we have been using sequences for handling calls to add with member
+  separator. However, this won't work in the case of model types which
+  have a completely different API. We need to somehow have two
+  different values in the sequence, depending of the type or somehow
+  make the API consistent.
 
 *** Rename formatting assistant                                       :story:
 
